bk_ida/gobmkida/g3/compute_eyes
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/compute_eyes/src/engine/optics.c:1268:12: error: use of undeclared identifier 'eyevalue'
*value = ( eyevalue)v12; 
           ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/compute_eyes/src/engine/optics.c:1272:12: error: use of undeclared identifier 'eyevalue'
*value = ( eyevalue)33686018; 
           ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/compute_eyes/src/obj/1/optics.o] Error 1
